# TransFuse-Thesis

./: .gitignore  README.md
TransFuse/: CMakeLists.txt  Dockerfile  docker-compose.yml  hello.cpp  passthrough.cpp  passthrough_helpers.h  transfuse.cpp  utils.cc
mmap-btree/: .gitignore  CMakeLists.txt  main.cpp
mmap-btree/bench/: bm_btree.cc  local.cmake
mmap-btree/include/: local.cmake
mmap-btree/include/transfuse/: btree.h  buffer_manager.h  defer.h  file_mapper.h  hex_dump.h  segment.h
mmap-btree/src/: buffer_manager.cc  file_mapper.cc  hex_dump.cc  local.cmake
mmap-btree/test/: btree_test.cc  local.cmake  tester.cc
mmap-btree/tools/: local.cmake
mmap-proof-of-failure/: CMakeLists.txt  main.cpp
mmap-proof-of-failure/include/: file_mapper.h  mmap_manager.h
mmap-proof-of-failure/src/: file_mapper.cpp  mmap_manager.cpp
slotted-page-buffer-manager/: CMakeLists.txt  RF1_orders.txt  output_file.txt
slotted-page-buffer-manager/bench/: bm_buffer_manager.cc  bm_slotted_page.cc  local.cmake
slotted-page-buffer-manager/include/: local.cmake
slotted-page-buffer-manager/include/moderndbs/: buffer_manager.h  custom_read_writer_lock.h  database.h  file.h  segment.h  slotted_page.h
slotted-page-buffer-manager/src/: buffer_manager.cc  custom_read_writer_lock.cc  database.cc  fsi_segment.cc  local.cmake  schema_segment.cc  slotted_page.cc  sp_segment.cc  transaction_manager.cc  wal_segment.cc
slotted-page-buffer-manager/src/file/: posix_file.cc
slotted-page-buffer-manager/test/: buffer_manager_test.cc  database_operations_test.cc  local.cmake  segment_test.cc  slotted_page_test.cc
slotted-page-buffer-manager/tools/: database_wrapper.cc  local.cmake  test_1GB.cc  test_1GB.cpp  test_4GB.cc  test_512M.cc  test_8GB.cc
slotted-page-mmap/: CMakeLists.txt  run_tests1GB.sh  run_tests4GB.sh  run_tests8GB.sh
slotted-page-mmap/bench/: bm_slotted_page.cc
slotted-page-mmap/include/: local.cmake
slotted-page-mmap/include/moderndbs/: buffer_manager.h  database.h  file_mapper.h  segment.h  slotted_page.h  transaction_manager.h
slotted-page-mmap/src/: buffer_manager.cc  custom_read_writer_lock.cc  database.cc  file_mapper.cc  fsi_segment.cc  local.cmake  schema_segment.cc  slotted_page.cc  sp_segment.cc  transaction_manager.cc  wal_segment.cc
slotted-page-mmap/test/: database_operations_test.cc  segment_test.cc  slotted_page_test.cc
slotted-page-mmap/tools/: database_wrapper.cc  test_1GB.cc  test_4GB.cc
